--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 language: php
 
-sudo: false
-
 php:
-  - 5.5
-  - 5.6
   - 7.0
+  - 5.6
+  - 5.5
+
+
+before_install:
+  - composer self-update
+
+install:
+  - travis_retry composer install --dev --no-interaction --prefer-source
 
 before_script:
   - phpenv rehash
 
 script:
-  - sh -c "vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests ./config ./webroot"
+  - sh -c 'vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests ./config ./webroot'
 
 notifications:
   email: false
+
+sudo: false
