--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "cakephp/cakephp": "~3.2",
         "mobiledetect/mobiledetectlib": "2.*",
         "cakephp/migrations": "1.5.5",
-        "cakephp/plugin-installer": "*"
+        "cakephp/plugin-installer": "*",
+        "maiconpinto/cakephp-materializecss-theme": "dev-master"
     },
     "require-dev": {
         "psy/psysh": "@stable",
